--- a/introduction.html
+++ b/introduction.html
@@ -190,9 +190,9 @@
 <p>本文将描述如何实现一个推箱子 📦, 示例代码使用 Rust 语言 🦀 编写.</p>
 <h2 id="推箱子的起源"><a class="header" href="#推箱子的起源">推箱子的起源</a></h2>
 <p>推箱子在 1981 年由日本人今林宏行(いまばやし ひろゆき)所创造, 第一个版本于 1982 年 12 月发行, 名为<em>仓库番</em>, 字面意思为 "仓库管理员" 👷.<sup class="footnote-reference"><a href="#1">1</a></sup> 英文名为: Sokoban 或 Soukoban.</p>
-<p><img src="assets/first_sokoban_15.png" alt="First Sokoban #15" /></p>
+<img alt="First Sokoban #15" src="assets/first_sokoban_15.png" width="50%" style="display: block; margin: 0 auto">
 <p>截至 2024 年, 最新版本推箱子(みんなの倉庫番)于 2019 年 8 月在 PlayStation 4 平台发行.<sup class="footnote-reference"><a href="#1">1</a></sup></p>
-<p><img src="assets/everyones_sokoban.jpg" alt="The Sokoban" /></p>
+<img alt="The Sokoban" src="assets/everyones_sokoban.jpg" width="50%" style="display: block; margin: 0 auto">
 <p>最新版本的推箱子在角色控制方面相较于其最初的版本并未见明显改进, 本文后续将介绍一种纯鼠标控制的角色控制方法 🖱️.</p>
 <h2 id="为什么通过案例来讲解"><a class="header" href="#为什么通过案例来讲解">为什么通过案例来讲解</a></h2>
 <p>本文以推箱子为案例, 深入浅出的描述软件开发过程. 通过案例讲解有以下目的:</p>
