deploy: b96375baefbb4df28f26d1f089dc6ebcec38d31f

--- a/level/normalization.html
+++ b/level/normalization.html
@@ -187,19 +187,19 @@
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="标准化"><a class="header" href="#标准化">标准化</a></h1>
-<p>有些关卡为了美观会在原关卡的基础上添加一些装饰, 这些装饰性的元素在本质上并<strong>不影响关卡的解法</strong>.<br />
-标准化的目的是移除这些与求解<strong>无关或冗余</strong>的元素.</p>
-<p>理想状态下, 任何具有相同步数最优解的关卡都可以被标准化为同一个关卡. 理论上可以先对关卡解析自动求解, 获得最优解决方案后再<a href="parse_level.html#%E4%BB%8E%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88%E6%9E%84%E9%80%A0%E5%85%B3%E5%8D%A1">从解决方案构造关卡</a>来得到标准化后的关卡.<br />
-但对于 PSPACE-complete 的推箱子问题来说, 自动求解最优解决方案通常是耗时且困难的, 因此还需要一种不依赖于关卡解决方案的高效(多项式时间内得出结果)标准化方法. 尽管该方法得到的标准化结果并不完美.</p>
+<p>在关卡设计中, 有时会为了美观在原关卡基础上添加一些装饰性元素, 但这些装饰性的元素本质上并不会影响关卡的解法.<br />
+标准化的目的是移除这些与求解无关或冗余的元素.</p>
+<p>理想情况下, 任何具有相同步数最优解的关卡都可以标准化为同一个关卡. 理论上, 可以先对关卡进行自动求解, 获得最优解决方案后, 再<a href="parse_level.html#%E4%BB%8E%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88%E6%9E%84%E9%80%A0%E5%85%B3%E5%8D%A1">从解决方案构造关卡</a>来得到标准化后的关卡.<br />
+然而, 对于 PSPACE-complete 的推箱子问题来说, 通过自动求解获得最优解决方案通常是耗时且困难的, 因此还需要一种不依赖于关卡解决方案的高效(多项式时间内得出结果)标准化方法. 尽管该方法得到的标准化结果并不完美.</p>
 <p>关卡的标准化可以分为以下几个步骤:</p>
 <ol>
 <li>
 <p>将不可移动的箱子变为墙.</p>
-<p>箱子可能默认就处于死锁状态, 可以当作墙体处理.</p>
+<p>箱子可能默认就处于死锁状态, 可以将其视为墙体.</p>
 </li>
 <li>
 <p>将无需使用的地板变为墙.</p>
-<p>如果一个地板被三面墙包围, 属于死胡同, 可以当作墙体处理.</p>
+<p>如果一个地板被三面墙包围, 属于死胡同, 可以将其视为墙体.</p>
 </li>
 <li>
 <p>移除无法到达的墙.</p>
