deploy: c7a830c7f55c022fbf0d156c725a888052b2b5eb

--- a/level/index.html
+++ b/level/index.html
@@ -190,7 +190,7 @@
 <h2 id="xsb-格式"><a class="header" href="#xsb-格式">XSB 格式</a></h2>
 <p>推箱子关卡所使用的 XSB 格式因其简洁和直观而受到了广泛的认可和应用, 最初由 XSokoban 所使用. 该格式使用 ASCII 字符来表示地图元素, 并支持注释和附加元数据.<br />
 以关卡 <code>Boxworld #1</code> 为例:</p>
-<p><img src="../assets/boxworld_1.png" alt="Boxworld #1" /></p>
+<p><img src="assets/boxworld_1.png" alt="Boxworld #1" /></p>
 <p>其 XSB 格式关卡的数据如下:</p>
 <pre><code class="language-txt">;Level 1
 __###___
@@ -351,7 +351,7 @@ ___HHH__
 </code></pre>
 <h2 id="特殊关卡"><a class="header" href="#特殊关卡">特殊关卡</a></h2>
 <h3 id="玩家不可达区域存在箱子"><a class="header" href="#玩家不可达区域存在箱子">玩家不可达区域存在箱子</a></h3>
-<p><img src="../assets/sasquatch_41.png" alt="Sasquatch #41 by David W. Skinner" /></p>
+<p><img src="assets/sasquatch_41.png" alt="Sasquatch #41 by David W. Skinner" /></p>
 <pre><code class="language-txt">   #####
    #   #
  ###   ########
@@ -368,7 +368,7 @@ ___HHH__
                 #####
 </code></pre>
 <h3 id="存在只有空元素的行"><a class="header" href="#存在只有空元素的行">存在只有空元素的行</a></h3>
-<p><img src="../assets/steaming_hot.png" alt="&quot;Steaming Hot&quot; by David Buchweitz" /></p>
+<p><img src="assets/steaming_hot.png" alt="&quot;Steaming Hot&quot; by David Buchweitz" /></p>
 <pre><code class="language-txt">  #      #
  #   #  #
   # #  #
@@ -390,7 +390,7 @@ ___HHH__
 <h3 id="无完整外墙"><a class="header" href="#无完整外墙">无完整外墙</a></h3>
 <p>部分推箱子程序支持无完整外墙的关卡.<br />
 在本文中, 这种关卡属于无效关卡. 但可以通过为其添加外墙的方式来转换为有效关卡.</p>
-<p><img src="../assets/no_walls_level.png" alt="&quot;No walls&quot; by Rincewind" /></p>
+<p><img src="assets/no_walls_level.png" alt="&quot;No walls&quot; by Rincewind" /></p>
 <pre><code class="language-txt">* ** *
   **
 **@$.*
