--- a/level/index.html
+++ b/level/index.html
@@ -221,7 +221,7 @@ Author: Thinking Rabbit
 <tr><td><code>*</code></td><td>位于目标上的箱子</td></tr>
 </tbody></table>
 </div>
-<p>其中地板一共使用了三种符号表示, 是因为连续的空格在某些在线论坛或邮件中可能被截断, 因此使用连字符(<code>-</code>)和下划线(<code>_</code>)来替代<sup class="footnote-reference"><a href="#1">1</a></sup>.</p>
+<p>其中地板一共使用了三种符号表示, 是因为连续的空格在某些在线论坛或邮件中可能被截断, 因此使用连字符(<code>-</code>)和下划线(<code>_</code>)来替代<sup class="footnote-reference" id="fr-1-1"><a href="#footnote-1">1</a></sup>.</p>
 <h3 id="元数据"><a class="header" href="#元数据">元数据</a></h3>
 <p>第 10 行的 <code>Title: Boxworld 1</code> 可以解释为键为 <code>title</code> (不区分大小写), 值为 <code>Boxworld 1</code> 的元数据.<br />
 还有一种用于多行注释的特殊元数据. 内容通过 <code>comment:</code> 和 <code>comment-end:</code> 包裹. 这也是唯一支持值有多行的元数据.</p>
@@ -337,7 +337,7 @@ Author: Thinking Rabbit
 </code></pre>
 <p>请参见 <a href="http://sokobano.de/wiki/index.php?title=Sok_format">Sok format · Sokoban Wiki</a>.</p>
 <h3 id="mf8"><a class="header" href="#mf8">MF8</a></h3>
-<p>中文论坛魔方吧<sup class="footnote-reference"><a href="#2">2</a></sup>使用 MF8 格式:</p>
+<p>中文论坛魔方吧<sup class="footnote-reference" id="fr-2-1"><a href="#footnote-2">2</a></sup>使用 MF8 格式:</p>
 <pre><code class="language-txt">[soko=8,8]
 __HHH___
 __H.H___
@@ -405,13 +405,14 @@ ___HHH__
 <ul>
 <li><a href="http://sokobano.de/wiki/index.php?title=Level_format">http://sokobano.de/wiki/index.php?title=Level_format</a>.</li>
 </ul>
-<div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
-<p><a href="http://sokobano.de/wiki/index.php?title=Level_format">http://sokobano.de/wiki/index.php?title=Level_format</a></p>
-</div>
-<div class="footnote-definition" id="2"><sup class="footnote-definition-label">2</sup>
-<p><a href="http://www.mf8-china.com/forum.php">http://www.mf8-china.com/forum.php</a></p>
-</div>
-
+<hr>
+<ol class="footnote-definition"><li id="footnote-1">
+<p><a href="http://sokobano.de/wiki/index.php?title=Level_format">http://sokobano.de/wiki/index.php?title=Level_format</a> <a href="#fr-1-1">↩</a></p>
+</li>
+<li id="footnote-2">
+<p><a href="http://www.mf8-china.com/forum.php">http://www.mf8-china.com/forum.php</a> <a href="#fr-2-1">↩</a></p>
+</li>
+</ol>
 
                         <!-- Giscus -->
                         <script src="https://giscus.app/client.js" data-repo="ShenMian/sokoban-tutorial"
