--- a/resources.html
+++ b/resources.html
@@ -190,7 +190,7 @@
 <ul>
 <li><a href="http://sokobano.de/wiki/">http://sokobano.de/wiki/</a>: 推箱子 Wiki, 德国.</li>
 <li><a href="https://sourceforge.net/projects/sokobanyasc/">https://sourceforge.net/projects/sokobanyasc/</a> 推箱子软件 SokobanYASC.</li>
-<li><a href="https://www.sokoban-online.de/">https://www.sokoban-online.de/</a>: 推箱子软件 JSoko.</li>
+<li><a href="https://jsokoapplet.sourceforge.io/">https://jsokoapplet.sourceforge.io/</a>: 推箱子软件 JSoko.</li>
 <li><a href="https://ygp.orgfree.com/">https://ygp.orgfree.com/</a> 推箱子软件 YSokoban.</li>
 <li><a href="https://sokoban.cn/">https://sokoban.cn/</a>: 推箱子平台, 魔方吧推箱子比赛, 中国.</li>
 <li><a href="https://sokoban.jp/">https://sokoban.jp/</a> 推箱子官网, 日本.</li>
